[gd_scene load_steps=13 format=2]

[ext_resource path="res://Script/Entrance.gd" type="Script" id=1]
[ext_resource path="res://assets/World/dungeon_door_1.png" type="Texture" id=2]
[ext_resource path="res://assets/Shadows/light.png" type="Texture" id=3]
[ext_resource path="res://assets/Shadows/big-shadow.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=4]
radius = 16.2218
height = 13.8838

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("GateBody/Gate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GateBody/CollisionPolygon2D:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("GateBody/CollisionPolygon2D:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("GateBody/CollisionPolygon2D2:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("GateBody/CollisionPolygon2D2:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("EnterDungeon:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("EnterDungeon:scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("EnterDungeon:scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0.7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("GateBody/CollisionPolygon2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("GateBody/CollisionPolygon2D2:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("AnimationPlayer:playback_speed")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "close"
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("GateBody/Gate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 7, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GateBody/CollisionPolygon2D:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 16.2, -0.25, 0, 0.25, 0, 16.2, -0.25, 0, 0.25, 0, 12.1, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("GateBody/CollisionPolygon2D:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6, 0.7 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("GateBody/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("GateBody/CollisionPolygon2D2:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -16.1, -0.25, 0, 0.25, 0, -16.1, -0.25, 0, 0.25, 0, -11, -0.25, 0, 0.25, 0, -7, -0.25, 0, 0.25, 0, -3, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("GateBody/CollisionPolygon2D2:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6, 0.7 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("GateBody/CollisionPolygon2D2:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_close_finish"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("EnterDungeon:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("GateBody/Gate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GateBody/CollisionPolygon2D:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("GateBody/CollisionPolygon2D:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("GateBody/CollisionPolygon2D2:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("GateBody/CollisionPolygon2D2:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("EnterDungeon:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("EnterDungeon:scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("EnterDungeon:scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0.7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("GateBody/CollisionPolygon2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("GateBody/CollisionPolygon2D2:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "open"
length = 1.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("GateBody/Gate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GateBody/CollisionPolygon2D:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2.1, -0.25, 0, 0.25, 0, 7.1, -0.25, 0, 0.25, 0, 12.2, -0.25, 0, 0.25, 0, 16.2, -0.25, 0, 0.25, 0, 16.2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("GateBody/CollisionPolygon2D:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("GateBody/CollisionPolygon2D2:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -3, -0.25, 0, 0.25, 0, -7.1, -0.25, 0, 0.25, 0, -11.1, -0.25, 0, 0.25, 0, -16.1, -0.25, 0, 0.25, 0, -16.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("GateBody/CollisionPolygon2D2:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("GateBody/CollisionPolygon2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GateBody/CollisionPolygon2D2:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("AnimationPlayer:playback_speed")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("EnterDungeon:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("EnterDungeon:scale:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0.7, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.1 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("EnterDungeon:scale:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0.7, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.1 )
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 18.5277
height = 23.1044

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/Font_Textur/Pixel_Font_free.ttf"

[sub_resource type="DynamicFont" id=11]
size = 8
font_data = SubResource( 10 )

[node name="DungeonGate" type="Area2D"]
show_behind_parent = true
collision_layer = 16384
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 15 )
scale = Vector2( 1.05, 1 )
texture = ExtResource( 4 )

[node name="EnterDungeon" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 4 )
disabled = true

[node name="GateBody" type="StaticBody2D" parent="."]
collision_layer = 2049
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GateBody"]
polygon = PoolVector2Array( 0.0260468, -23.1223, -0.0558414, 16.0509, 16.0348, 16.0509, 16.1672, -1.56264, 13.258, -13.3552, 10.1011, -18.1958, 5.12014, -22.8961 )
disabled = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="GateBody"]
polygon = PoolVector2Array( -0.125, -23.25, -0.0231113, 16.0802, -16.0955, 16.1298, -16.0369, -3.04028, -12.1658, -14.3842, -9.14923, -19.7861, -4.09814, -23.0833 )
disabled = true

[node name="Gate" type="Sprite" parent="GateBody"]
texture = ExtResource( 2 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 0.0
anims/RESET = SubResource( 5 )
anims/close = SubResource( 8 )
anims/idle = SubResource( 6 )
anims/open = SubResource( 7 )

[node name="seek_player" type="Area2D" parent="."]
z_index = 10
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="seek_player"]
visible = false
position = Vector2( 0, 6.5 )
shape = SubResource( 9 )

[node name="EnterKey" type="Label" parent="seek_player"]
visible = false
modulate = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
margin_left = 4.85946
margin_top = -9.46218
margin_right = 10.8595
margin_bottom = 1.53782
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 11 )
text = "M"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="seek_player/EnterKey"]
position = Vector2( 2.40863, 4.53125 )
texture = ExtResource( 3 )
texture_scale = 0.05
color = Color( 0.486275, 0.25098, 0, 1 )
energy = 2.0

[connection signal="body_entered" from="." to="." method="_on_Entrance_body_entered"]
[connection signal="body_entered" from="seek_player" to="." method="_on_seek_player_body_entered"]
[connection signal="body_exited" from="seek_player" to="." method="_on_seek_player_body_exited"]
